Updated getter and setters